Disabled extern template containers on windows
- more fixes to tim::math ambiguous overloads
- bug fix in TIMEMORY_CALIPER_TYPE_APPLY and TIMEMORY_CALIPER_TYPE_APPLY0
- updated google-test submodule
- support for arch flags on Windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,6 +51,11 @@ if(TIMEMORY_BUILD_TESTING)
     if(NOT TIMEMORY_BUILD_MINIMAL_TESTING)
         set(TIMEMORY_BUILD_EXAMPLES ON)
     endif()
+else()
+    if(TIMEMORY_BUILD_MINIMAL_TESTING)
+        set(TIMEMORY_BUILD_GOOGLE_TEST ON)
+        set(TIMEMORY_BUILD_EXAMPLES OFF)
+    endif()
 endif()
 #
 if("${CMAKE_BUILD_TYPE}" STREQUAL "")
