--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -19,33 +19,63 @@ environment:
       CPP: 14
       CONFIG: MinSizeRel
       EXAMPLES: "ON"
+      TOOLS: "ON"
+      USE_ARCH: "OFF"
+      USE_PYTHON: "ON"
+      BUILD_C: "ON"
       BUILD_STATIC: "OFF"
+      BUILD_TESTING: "OFF"
     - PYTHON: 37
       CPP: 17
       CONFIG: RelWithDebInfo
       EXAMPLES: "OFF"
+      TOOLS: "OFF"
+      USE_ARCH: "OFF"
+      USE_PYTHON: "ON"
+      BUILD_C: "OFF"
       BUILD_STATIC: "ON"
+      BUILD_TESTING: "OFF"
     - CONDA: 36
       CPP: 14
       CONFIG: MinSizeRel
       EXAMPLES: "OFF"
+      TOOLS: "OFF"
+      USE_ARCH: "OFF"
+      USE_PYTHON: "ON"
+      BUILD_C: "OFF"
       BUILD_STATIC: "ON"
+      BUILD_TESTING: "OFF"
     - CONDA: 37
       CPP: 17
       CONFIG: Release
       EXAMPLES: "OFF"
+      TOOLS: "OFF"
+      USE_ARCH: "OFF"
+      USE_PYTHON: "ON"
+      BUILD_C: "OFF"
       BUILD_STATIC: "ON"
+      BUILD_TESTING: "OFF"
     - PYTHON: 38
       CPP: 17
       CONFIG: MinSizeRel
       EXAMPLES: "ON"
+      TOOLS: "OFF"
+      USE_ARCH: "OFF"
+      USE_PYTHON: "ON"
+      BUILD_C: "OFF"
       BUILD_STATIC: "OFF"
+      BUILD_TESTING: "OFF"
     - CONDA: 38
       CPP: 14
       CONFIG: MinSizeRel
       EXAMPLES: "ON"
+      TOOLS: "OFF"
+      USE_ARCH: "ON"
+      USE_PYTHON: "ON"
+      BUILD_C: "OFF"
       BUILD_STATIC: "OFF"
-
+      BUILD_TESTING: "ON"
+      
 install:
   # Configure environment
   - ps: |
@@ -90,7 +120,7 @@ install:
         conda install -y -c defaults -c conda-forge -q pip setuptools scikit-build numpy matplotlib pillow cython
       }
       $env:TIMEMORY_FILE_OUTPUT = "OFF"
-      $env:TIMEMORY_AUTO_OUTPUT = "OFF"
+      $env:TIMEMORY_AUTO_OUTPUT = "ON"
       mkdir "C:\Users\appveyor\CTestTemp"
       $env:TEMP = "C:\Users\appveyor\CTestTemp"
 
@@ -105,25 +135,35 @@ build_script:
     -DCMAKE_INSTALL_PREFIX=..\install-timemory
     -DPYTHON_EXECUTABLE="%PYTHON_EXE%"
     -DTIMEMORY_USE_MPI=OFF
-    -DTIMEMORY_USE_PYTHON=ON
-    -DTIMEMORY_BUILD_C=ON
-    -DTIMEMORY_BUILD_PYTHON=ON
+    -DTIMEMORY_USE_PYTHON="%USE_PYTHON%"
+    -DTIMEMORY_USE_ARCH="%USE_ARCH%"
+    -DTIMEMORY_BUILD_C="%BUILD_C%"
     -DTIMEMORY_BUILD_EXAMPLES="%EXAMPLES%"
+    -DTIMEMORY_BUILD_TESTING="%BUILD_TESTING%"
+    -DTIMEMORY_BUILD_MINIMAL_TESTING="%BUILD_TESTING%"
+    -DTIMEMORY_BUILD_TOOLS="%TOOLS%"
     -DTIMEMORY_BUILD_GOOGLE_TEST=OFF
-    -DTIMEMORY_BUILD_TOOLS=ON
   - set MSBuildLogger="C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
   - cmake --build . --config "%CONFIG%" --target ALL_BUILD -- /m /v:m /logger:%MSBuildLogger%
   - cmake --build . --config "%CONFIG%" --target INSTALL -- /m /v:m /logger:%MSBuildLogger%
   - ls
   - ps: |
-      if ($env:EXAMPLES -eq "ON") {
+      if ($env:BUILD_TESTING -eq "ON") {
+          ctest . --output-on-failure
+      }
+      elseif ($env:EXAMPLES -eq "ON") {
         "./outputs/runtime/%CONFIG%/ex_optional_off.exe"
         "./outputs/runtime/%CONFIG%/ex_cxx_basic.exe"
         "./outputs/runtime/%CONFIG%/ex_optional_on.exe"
         "./outputs/runtime/%CONFIG%/ex_cxx_overhead.exe"
         "./outputs/runtime/%CONFIG%/ex_cxx_tuple.exe"
-        "./outputs/runtime/%CONFIG%/ex_c_minimal.exe"
-        "./outputs/runtime/%CONFIG%/ex_c_minimal_library.exe"
-        "./outputs/runtime/%CONFIG%/ex_c_timing.exe"
+        if ($env:BUILD_C -eq "ON") {
+          "./outputs/runtime/%CONFIG%/ex_c_minimal.exe"
+          "./outputs/runtime/%CONFIG%/ex_c_minimal_library.exe"
+          "./outputs/runtime/%CONFIG%/ex_c_timing.exe"
+        }
       }
-  - cmake -P tests/test-python-install-import.cmake
+  - ps: |
+      if ($env:USE_PYTHON -eq "ON") {
+        cmake -P tests/test-python-install-import.cmake
+      }
