Fix to windows python install
- CMP0010 issue with Python3_SITEARCH using backslashes and thus not installing python properly
- moved {plotting,hash,environment}/extern.cpp to {plotting,hash,environment}.cpp due to windows warning about same names for objects in same target causing build issues

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,9 +27,11 @@ if(TIMEMORY_CCACHE_BUILD)
     endif()
 endif()
 
+cmake_policy(SET CMP0010 NEW)
 cmake_policy(SET CMP0022 NEW)
 cmake_policy(SET CMP0048 NEW)
 cmake_policy(SET CMP0042 NEW)
+cmake_policy(SET CMP0053 NEW)
 #cmake_policy(SET CMP0063 NEW)
 if(NOT CMAKE_VERSION VERSION_LESS 3.13)
     cmake_policy(SET CMP0079 NEW)
