--- a/source/tests/CMakeLists.txt
+++ b/source/tests/CMakeLists.txt
@@ -204,6 +204,7 @@ add_timemory_google_test(component_bundle_tests
     SOURCES         component_bundle_tests.cpp
     LINK_LIBRARIES  common-test-libs
                     timemory::timemory-core
+                    ${_LIBRARY}
     ENVIRONMENT     ${component_bundle_tests_env})
 
 list(APPEND kokkosp_tests_env "TIMEMORY_COLLAPSE_THREADS=ON")
