ptl testing submodule update + minor travis/appveyor tweaks

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -74,8 +74,8 @@ environment:
       USE_PYTHON: "ON"
       BUILD_C: "OFF"
       BUILD_STATIC: "OFF"
-      BUILD_TESTING: "ON"
-      
+      BUILD_TESTING: "OFF"
+
 install:
   # Configure environment
   - ps: |
