--- a/.travis.yml
+++ b/.travis.yml
@@ -47,7 +47,7 @@ jobs:
         - CC=gcc-6
         - CXX=g++-6
         - BUILD_TYPE=MinSizeRel
-        - BUILD_ARGS='--quick --build-libs static shared --python --papi --ompt --gotcha --caliper --kokkos --stats --tools --cxx-standard=14'
+        - BUILD_ARGS='--quick --build-libs static shared --python --papi --ompt --gotcha --caliper --kokkos --stats --cxx-standard=14'
     # GCC 7
     - os: linux
       dist: bionic
@@ -289,7 +289,7 @@ script:
   - if [ -n "${COVERAGE}" ]; then ARGS="${ARGS} --coverage"; fi
   - if [ -n "${PROFILE}" ]; then ARGS="${ARGS} --profile=cpu"; fi
   - travis_wait 85 python ./pyctest-runner.py -cc ${CC} -cxx ${CXX} ${ARGS} --pyctest-build-type=${BUILD_TYPE} -j 1 -- -V --output-on-failure -- ${CMAKE_ARGS} -DCMAKE_INSTALL_PREFIX=${HOME}/timemory-install
-  - cd build-timemory/Linux
+  - if [ -z "${CONDA_OS}" ]; then cd build-timemory/Linux; else cd build-timemory/Darwin; fi
   - make install -j
   - if [ -f "tests/test-python-install-import.cmake" ]; then
     cmake -P tests/test-python-install-import.cmake;
