travis fixes + minor cleanup + python stability, imports
- fixed non-null terminated strings passed to timemory init
- import signal functions

--- a/timemory/__init__.py.in
+++ b/timemory/__init__.py.in
@@ -1,4 +1,5 @@
 #!@PYTHON_EXECUTABLE@
+# -*- coding: UTF-8 -*-
 # MIT License
 #
 # Copyright (c) 2018, The Regents of the University of California,
@@ -178,6 +179,9 @@ else:
             stop_ompt,
             start_ncclp,
             stop_ncclp,
+            enable_signal_detection,
+            disable_signal_detection,
+            set_exit_action,
             # api,
             # papi,
             # cupti,
