--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ jobs:
         - CC=clang
         - CXX=clang++
         - CMAKE_ARGS='-DTIMEMORY_BUILD_PYTHON_HIDDEN=ON'
+        - CTEST_ARGS='--force-new-ctest-process'
         - BUILD_ARGS='--quick --build-libs shared --python --cxx-standard=14'
 
     # ------------------------------------------------------------------------ #
@@ -288,8 +289,11 @@ script:
   - if [ -z "${BUILD_TYPE}" ]; then BUILD_TYPE=RelWithDebInfo ; fi
   - if [ -n "${COVERAGE}" ]; then ARGS="${ARGS} --coverage"; fi
   - if [ -n "${PROFILE}" ]; then ARGS="${ARGS} --profile=cpu"; fi
-  - travis_wait 85 python ./pyctest-runner.py -cc ${CC} -cxx ${CXX} ${ARGS} --pyctest-build-type=${BUILD_TYPE} -j 1 -- -V --output-on-failure -- ${CMAKE_ARGS} -DCMAKE_INSTALL_PREFIX=${HOME}/timemory-install
-  - if [ -z "${CONDA_OS}" ]; then cd build-timemory/Linux; else cd build-timemory/Darwin; fi
+  - export CTEST_ARGS="-V --output-on-failure ${CTEST_ARGS}"
+  - export CMAKE_ARGS="-DCMAKE_INSTALL_PREFIX=${HOME}/timemory-install ${CMAKE_ARGS}"
+  - export PYCTEST_ARGS="-cc ${CC} -cxx ${CXX} --pyctest-build-type=${BUILD_TYPE} -j 1 ${ARGS}"
+  - travis_wait 85 python ./pyctest-runner.py ${PYCTEST_ARGS} --  ${CTEST_ARGS} -- ${CMAKE_ARGS}
+  - if [ "${CONDA_OS}" = "Linux" ]; then cd build-timemory/Linux; else cd build-timemory/Darwin; fi
   - make install -j
   - if [ -f "tests/test-python-install-import.cmake" ]; then
     cmake -P tests/test-python-install-import.cmake;
