--- a/.travis.yml
+++ b/.travis.yml
@@ -41,18 +41,15 @@ jobs:
             - build-essential
             - libpapi-dev
             - papi-tools
-            - graphviz
-            - libgoogle-perftools-dev
-            - google-perftools
       env:
         - CC=gcc-6
         - CXX=g++-6
         - BUILD_TYPE=MinSizeRel
-        - BUILD_ARGS='--quick --build-libs static shared --python --papi --ompt --gotcha --caliper --kokkos --stats --cxx-standard=14'
+        - BUILD_ARGS='--quick --build-libs static shared --python --papi --gotcha --caliper --kokkos --stats --cxx-standard=14'
     # GCC 7
     - os: linux
       dist: bionic
-      python: "3.7"
+      python: "3.6"
       addons:
         apt:
           sources:
@@ -65,9 +62,6 @@ jobs:
             - mpich
             - libpapi-dev
             - papi-tools
-            - graphviz
-            - libgoogle-perftools-dev
-            - google-perftools
             - lcov
       env:
         - CC=gcc-7
@@ -91,11 +85,6 @@ jobs:
             - openmpi-bin
             - openmpi-common
             - libfabric-dev
-            - libpapi-dev
-            - papi-tools
-            - graphviz
-            - libgoogle-perftools-dev
-            - google-perftools
       env:
         - CC=gcc-8
         - CXX=g++-8
@@ -113,15 +102,10 @@ jobs:
             - clang-6.0
             - clang++-6.0
             - build-essential
-            - libpapi-dev
-            - papi-tools
-            - graphviz
-            - libgoogle-perftools-dev
-            - google-perftools
       env:
         - CC=clang-6.0
         - CXX=clang++-6.0
-        - BUILD_ARGS='--quick --build-libs static --ompt --kokkos --stats --tools --cxx-standard=14'
+        - BUILD_ARGS='--quick --build-libs static --kokkos --stats --tools --cxx-standard=14'
     # Clang 7
     - os: linux
       dist: bionic
@@ -138,9 +122,6 @@ jobs:
             - libfabric-dev
             - libpapi-dev
             - papi-tools
-            - graphviz
-            - libgoogle-perftools-dev
-            - google-perftools
       env:
         - CC=clang-7
         - CXX=clang++-7
@@ -166,9 +147,6 @@ jobs:
             - mpich
             - libpapi-dev
             - papi-tools
-            - graphviz
-            - libgoogle-perftools-dev
-            - google-perftools
       env:
         - CC=gcc-6
         - CXX=g++-6
@@ -177,7 +155,7 @@ jobs:
     # GCC 7
     - os: linux
       dist: bionic
-      python: "3.6"
+      python: "3.7"
       addons:
         apt:
           packages:
@@ -190,15 +168,11 @@ jobs:
             - libfabric-dev
             - libpapi-dev
             - papi-tools
-            - lcov
-            - graphviz
-            - libgoogle-perftools-dev
-            - google-perftools
       env:
         - CC=gcc
         - CXX=g++
         - BUILD_TYPE=Debug
-        - BUILD_ARGS='--quick --build-libs static --papi --mpi --ompt --kokkos --tools --cxx-standard=14'
+        - BUILD_ARGS='--quick --build-libs static --papi --mpi --ompt --cxx-standard=14'
     #
     # GCC 8
     - os: linux
@@ -245,7 +219,7 @@ jobs:
         - CC=clang-6.0
         - CXX=clang++-6.0
         - PROFILE=1
-        - BUILD_ARGS='--build-libs shared --gperftools --mpi --papi --mpip --ompt --kokkos --stats --tools --cxx-standard=14'
+        - BUILD_ARGS='--build-libs shared --gperftools --mpi --papi --mpip --stats --tools --cxx-standard=14'
         - CMAKE_ARGS='-DTIMEMORY_USE_PYTHON=OFF'
     # Clang 7
     - os: linux
@@ -259,15 +233,10 @@ jobs:
             - build-essential
             - libmpich-dev
             - mpich
-            - libpapi-dev
-            - papi-tools
-            - graphviz
-            - libgoogle-perftools-dev
-            - google-perftools
       env:
         - CC=clang-7
         - CXX=clang++-7
-        - BUILD_ARGS='--quick --build-libs shared --gotcha --caliper --mpi --papi --python --stats --tools --cxx-standard=14'
+        - BUILD_ARGS='--quick --build-libs shared --gotcha --caliper --mpi --python --stats --tools --cxx-standard=14'
 
     # ------------------------------------------------------------------------ #
 
