Windows/MSVC fixes: Python issue with CMAKE_DEBUG_POSTFIX and copies instead of symlinks

--- a/source/python/CMakeLists.txt
+++ b/source/python/CMakeLists.txt
@@ -5,6 +5,9 @@
 #
 ##########################################################################################
 
+# if set, will screw up loading library
+unset(CMAKE_DEBUG_POSTFIX)
+
 set(_visibility timemory::timemory-default-visibility)
 set(CMAKE_CXX_CLANG_TIDY)
 set(CMAKE_UNITY_BUILD OFF)
