Changed debug postfix to "d" instead of "_d" [skip travis]

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_INSTALL_DEFAULT_COMPONENT_NAME library)
 if (MSVC)
     # set debug postfix so debug library and executable artifact names do not
     # conflict with release artifacts
-    set(CMAKE_DEBUG_POSTFIX "_d")
+    set(CMAKE_DEBUG_POSTFIX "d")
 endif()
 
 #----------------------------------------------------------------------------------------#
