TIMEMORY_BUILD_PYTHON_LINE_PROFILER Option [skip travis]
- disabled by default on Windows bc of weird behavior when building

--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -1,5 +1,5 @@
 
-if(TIMEMORY_BUILD_PYTHON)
+if(TIMEMORY_BUILD_PYTHON AND TIMEMORY_BUILD_PYTHON_LINE_PROFILER)
     checkout_git_submodule(RECURSIVE
         RELATIVE_PATH external/line-profiler
         WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
