--- a/timemory/__init__.py.in
+++ b/timemory/__init__.py.in
@@ -363,8 +363,9 @@ version = sys.modules[__name__].__getattribute__("version")
 try:
     if "line_profiler" not in sys.modules:
         from . import line_profiler as lineprof
+        _lineprof = lineprof._line_profiler
 
         sys.modules["line_profiler"] = lineprof
-        sys.modules["line_profiler._line_profiler"] = lineprof._line_profiler
-except ImportError:
+        sys.modules["line_profiler._line_profiler"] = _lineprof
+except (ImportError, AttributeError):
     pass
