--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,7 +33,7 @@ jobs:
             python ./pyctest-runner.py -SF --pyctest-site=CircleCI --pyctest-model=Continuous --pyctest-build-type=Release -j1
             --build-libs shared --mpi --mpip --papi --gotcha --stats --tools --dyninst --cxx-standard=17
             -- -V --output-on-failure
-            -- -DTIMEMORY_BUILD_GOTCHA=OFF -DCMAKE_INSTALL_PREFIX=${HOME}/timemory-install
+            -- -DTIMEMORY_BUILD_{CALIPER,GOTCHA,COMPILER_INSTRUMENTATION}=OFF -DCMAKE_INSTALL_PREFIX=${HOME}/timemory-install
       - run:
           name: install
           command: >
