Update Python finding utilities (#111)
* Windows/MSVC fixes: Python issue with CMAKE_DEBUG_POSTFIX and copies instead of symlinks

* Changed debug postfix to "d" instead of "_d" 

* Update Python configuration settings 

- enable unity build for python
- added local FindPythonLibs.cmake
- updated line-profiler submodule to use timemory's PythonConfig cmake script

* Removed settings some Python3 configuration values

- removed Python3_FIND_FRAMEWORK
- removed Python3_FIND_ABI
- removed Python3_USE_STATIC_LIBS

* Updated line-profiler submodule

* TIMEMORY_BUILD_PYTHON_LINE_PROFILER Option 

- disabled by default on Windows bc of weird behavior when building

* Update Options.cmake

--- a/source/python/CMakeLists.txt
+++ b/source/python/CMakeLists.txt
@@ -5,9 +5,12 @@
 #
 ##########################################################################################
 
+# if set, will screw up loading library
+unset(CMAKE_DEBUG_POSTFIX)
+
 set(_visibility timemory::timemory-default-visibility)
 set(CMAKE_CXX_CLANG_TIDY)
-set(CMAKE_UNITY_BUILD OFF)
+set(CMAKE_UNITY_BUILD ON)
 set(CMAKE_VISIBILITY_INLINES_HIDDEN OFF)
 set(CMAKE_INSTALL_DEFAULT_COMPONENT_NAME python)
 
