--- a/source/tools/timemory-compiler-instrument/CMakeLists.txt
+++ b/source/tools/timemory-compiler-instrument/CMakeLists.txt
@@ -1,6 +1,6 @@
 
 # windows not yet implemented
-if(WIN32 OR NOT TIMEMORY_BUILD_TOOLS OR NOT TIMEMORY_BUILD_COMPILER_INSTRUMENTATION)
+if(WIN32 OR NOT TIMEMORY_BUILD_COMPILER_INSTRUMENTATION)
     return()
 endif()
 
