--- a/source/tools/timemory-pid/CMakeLists.txt
+++ b/source/tools/timemory-pid/CMakeLists.txt
@@ -6,19 +6,15 @@ endif()
 #----------------------------------------------------------------------------------------#
 # Build and install timemory-pid tool which provides a PID to MPI applications
 #
-if(TIMEMORY_BUILD_TOOLS OR TIMEMORY_BUILD_PID)
+add_executable(timemory-pid EXCLUDE_FROM_ALL timemory-pid.cpp)
 
-    add_executable(timemory-pid timemory-pid.cpp)
+target_link_libraries(timemory-pid PRIVATE
+    timemory::timemory-compile-options
+    timemory::timemory-headers
+    timemory::timemory-mpi)
 
-    target_link_libraries(timemory-pid PRIVATE
-        timemory::timemory-compile-options
-        timemory::timemory-headers
-        timemory::timemory-mpi)
+set_target_properties(timemory-pid PROPERTIES
+    INSTALL_RPATH_USE_LINK_PATH ON)
 
-    set_target_properties(timemory-pid PROPERTIES
-        INSTALL_RPATH_USE_LINK_PATH ON)
-
-    # timemory-pid installation
-    install(TARGETS timemory-pid DESTINATION bin)
-
-endif()
+# timemory-pid installation
+install(TARGETS timemory-pid DESTINATION bin OPTIONAL)
