--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,7 +30,7 @@ jobs:
             source activate &&
             conda activate pyctest &&
             python ./pyctest-runner.py -SF --pyctest-site=CircleCI --pyctest-model=Continuous --pyctest-build-type=Release -j1
-            --build-libs shared --mpi --mpip --papi --gotcha --stats --dyninst --cxx-standard=17
+            --build-libs shared --mpi --papi --gotcha --stats --tools mpip dyninst --cxx-standard=17
             -- -V --output-on-failure
             -- -DTIMEMORY_BUILD_{CALIPER,GOTCHA,COMPILER_INSTRUMENTATION}=OFF -DCMAKE_INSTALL_PREFIX=${HOME}/timemory-install
       - run:
