--- a/.travis.yml
+++ b/.travis.yml
@@ -45,7 +45,7 @@ jobs:
         - CC=gcc-6
         - CXX=g++-6
         - BUILD_TYPE=MinSizeRel
-        - BUILD_ARGS='--quick --build-libs static shared --python --papi --gotcha --caliper --kokkos --stats --cxx-standard=14'
+        - BUILD_ARGS='--quick --build-libs static shared --python --papi --gotcha --caliper --tools timem --stats --cxx-standard=14'
     # GCC 7
     - os: linux
       dist: bionic
@@ -66,7 +66,7 @@ jobs:
       env:
         - CC=gcc-7
         - CXX=g++-7
-        - BUILD_ARGS='--build-libs shared --mpi --papi --caliper --mpip --gotcha --stats --cxx-standard=17 --coverage'
+        - BUILD_ARGS='--build-libs shared --mpi --papi --caliper --gotcha --tools mpip compiler --stats --cxx-standard=17 --coverage'
     #
     # GCC 8
     - os: linux
@@ -87,7 +87,7 @@ jobs:
       env:
         - CC=gcc-8
         - CXX=g++-8
-        - BUILD_ARGS='--build-libs static --mpi --cxx-standard=17'
+        - BUILD_ARGS='--build-libs static --mpi --tools timem --cxx-standard=17'
     # Clang 6.0
     - os: linux
       dist: xenial
@@ -104,7 +104,7 @@ jobs:
       env:
         - CC=clang-6.0
         - CXX=clang++-6.0
-        - BUILD_ARGS='--quick --build-libs static --kokkos --stats --tools --cxx-standard=14'
+        - BUILD_ARGS='--quick --build-libs static --stats --tools kokkos-config --cxx-standard=14'
     # Clang 7
     - os: linux
       dist: bionic
@@ -124,7 +124,7 @@ jobs:
       env:
         - CC=clang-7
         - CXX=clang++-7
-        - BUILD_ARGS='--quick --build-libs static --caliper --mpi --papi --ompt --stats --tools --cxx-standard=14'
+        - BUILD_ARGS='--quick --build-libs static --caliper --mpi --papi --stats --tools ompt --cxx-standard=14'
     # ------------------------------------------------------------------------ #
     #
     #   Python 3.7 / Linux
@@ -150,7 +150,7 @@ jobs:
         - CC=gcc-6
         - CXX=g++-6
         - BUILD_TYPE=MinSizeRel
-        - BUILD_ARGS='--build-libs shared --papi --gotcha --python --kokkos --stats --ipo --cxx-standard=14'
+        - BUILD_ARGS='--build-libs shared --papi --gotcha --python --stats --ipo --cxx-standard=14'
     # GCC 7
     - os: linux
       dist: bionic
@@ -171,7 +171,7 @@ jobs:
         - CC=gcc
         - CXX=g++
         - BUILD_TYPE=Debug
-        - BUILD_ARGS='--quick --build-libs static --papi --mpi --ompt --cxx-standard=14'
+        - BUILD_ARGS='--quick --build-libs static --papi --mpi --cxx-standard=14'
     #
     # GCC 8
     - os: linux
@@ -217,7 +217,7 @@ jobs:
       env:
         - CC=clang-6.0
         - CXX=clang++-6.0
-        - BUILD_ARGS='--build-libs shared --gperftools --mpi --papi --mpip --stats --tools --cxx-standard=14 --profile=cpu'
+        - BUILD_ARGS='--build-libs shared --gperftools --mpi --papi --stats --tools compiler --cxx-standard=14 --profile=cpu'
         - CMAKE_ARGS='-DTIMEMORY_USE_PYTHON=OFF'
     # Clang 7
     - os: linux
@@ -234,7 +234,7 @@ jobs:
       env:
         - CC=clang-7
         - CXX=clang++-7
-        - BUILD_ARGS='--quick --build-libs shared --gotcha --caliper --mpi --python --stats --tools --cxx-standard=14'
+        - BUILD_ARGS='--quick --build-libs shared --gotcha --caliper --mpi --python --stats --tools timem --cxx-standard=14'
   fast_finish: true
 
 before_install:
